--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1527,6 +1527,7 @@ padding-right: 12px !important;
     min-height: 215px !important;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05);
     border-radius: 0px !important;
+    margin-top: 20px;
   }
 
   .generic-card-details{
