--- a/react_webviews/src/dashboard/PassiveIndexFunds/components/PassiveFundDetails.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/components/PassiveFundDetails.scss
@@ -58,4 +58,7 @@
     background-color: #ededed;
     margin: 30px 20px 30px 20px;
   }
+  .return-condition{
+    color: #D6D6D6 !important;
+  }
 }
