--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1528,6 +1528,8 @@ padding-right: 12px !important;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05);
     border-radius: 0px !important;
     margin-top: 20px;
+    margin-bottom: 30px !important;
+    padding-top: 20px !important;
   }
 
   .generic-card-details{
@@ -1543,6 +1545,7 @@ padding-right: 12px !important;
         font-size: 15px;
         color: #161A2E;
         font-weight: 500;
+        line-height: 24px !important;
       }
 
       .subtitle {
@@ -1550,6 +1553,7 @@ padding-right: 12px !important;
         font-size: 11px;
         margin: 20px 0 16px 0;
         line-height: 18px;
+        font-weight: 400;
       }
     }
 
