--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -41,6 +41,11 @@
   color: white;
   width: 100%;
   padding-bottom: 20px;
+
+  .inpage-subtitle{
+    padding: 5px 0 30px 20px;
+    color: white;
+  }
   p{
     margin: 0;
     padding: 0;
