--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -70,6 +70,10 @@
 
 .recommendations-disclaimers {
   margin: 60px 0;
+
+  .wv-security-disclaimer {
+    margin-top: 40px !important;
+  }
 }
 
 .recommendations-disclaimer-morning {
