--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -154,6 +154,18 @@
         align-items: center;
         padding: 10px 0;
         font-size: 16px;
+
+        .recommendations-funds-stock {
+          color: #C75B5B;
+        }
+
+        .recommendations-funds-bond {
+          color: #2ec5a3;
+        }
+
+        .recommendations-funds-hybrid {
+          color: #4685ce;
+        }
   
         & > p:first-child {
           color: #4685ce;
